--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -23,8 +23,9 @@
   <div class="scene" id="welcome">
     <article class="content">
 
- 
 
+      <p>{{ welcomeMessage ? welcomeMessage[0] : ''}}</p>
+      <p>{{welcomeMessage ? welcomeMessage[1] : ''}}</p>
       <div class="row">
         <div class=""col-12>
           <div class="gallery">
@@ -58,7 +59,7 @@
               </div>
               </form>
 
-        
+
         </div>
       </div>
 
