Adds message for live presentation with various time zones

--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -26,6 +26,7 @@
 
       <p>{{ welcomeMessage ? welcomeMessage[0] : ''}}</p>
       <p>{{welcomeMessage ? welcomeMessage[1] : ''}}</p>
+      <p>Join us for an online live presentation held at the Landon hotel on July 1, 2024 at {{timeConversion}}</p>
       <div class="row">
         <div class=""col-12>
           <div class="gallery">
